src/k8s/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: Move-it
  labels:
    app: moveit
    app.openshift.io/runtime: nodejs
spec:
  replicas: 2
  selector:
    matchLabels:
      app: moveit
  template:
    metadata:
      labels:
        app: moveit
    spec:
      containers:
      - name: moveit
        livenessProbe:
          httpGet:
            path: /
            port: 3000
          periodSeconds: 5
          initialDelaySeconds: 2
        readinessProbe:
          httpGet:
            path: /
            port: 3000
          periodSeconds: 2
          initialDelaySeconds: 2
        image: 
        resources:
          requests:
            cpu: 100m
            memory: 64Mi
          limits:
            cpu: 200m
            memory: 128Mi
        ports:
        - containerPort: 3000
          protocol: TCP
