src/k8s/base/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: Move-it
  labels:
    app: moveit
spec:
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  selector:
    app: moveit
